--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
             from { transform: translateY(-100%); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
+        .cursor-move {
+    cursor: move;
+    touch-action: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+.cursor-move:active {
+    opacity: 0.7;
+    transform: scale(0.95);
+}
+
+@media (hover: none) and (pointer: coarse) {
+    .cursor-move {
+        -webkit-touch-callout: none;
+        -webkit-tap-highlight-color: transparent;
+    }
+}
     </style>
 </head>
 <body>
