--- a/index.html
+++ b/index.html
@@ -846,15 +846,15 @@ const rotateWithSubstitutions = (direction) => {
         };
     }
 
-    // FIXED: Check for required substitutions after rotation
-    const substitutions = [];
-
-    // Don't perform substitutions if we're at rotation 0 (initial setup)
+    // FIXED: Prevent automatic rotation immediately after optimization
 if (rotationCount === 0 && direction === 'forward') {
-    setCourtPositions(newPositions);
+    console.log("Preventing automatic rotation after optimization");
     setRotationCount(1);
     return;
 }
+
+// FIXED: Check for required substitutions after rotation
+const substitutions = [];
     Object.keys(newPositions).forEach(position => {
     if (position === 'bench') return;
     
