--- a/index.html
+++ b/index.html
@@ -1904,19 +1904,29 @@ const calculateCurrentStrengths = () => {
                             "⭐ Select up to 3 star players for rotational optimization. Algorithms ensure 1+ star always on court and prevent adjacent positioning."
                         )
                     )
-                ) : (
-                    React.createElement('div', { className: "mb-4 p-3 bg-green-50 border border-green-200 rounded-lg" },
-                        React.createElement('div', { className: "text-sm font-medium text-green-800 mb-1" },
-                            "Substitutional Play Mode"
-                        ),
-                        React.createElement('div', { className: "text-xs text-green-700 mb-2" },
-                            "⭐ Gold tiles = no substitution partner. Matching colors = paired for substitutions."
-                        ),
-                        React.createElement('div', { className: "text-xs text-green-600" },
-                            `No-Sub Players: ${players.filter(p => p.star || p.isFullTime).length} | Sub Pairs: ${Math.floor(players.filter(p => p.subPair).length / 2)}`
-                        )
-                    )
-                ),
+               ) : (
+    React.createElement('div', { className: "mb-4 space-y-2" },
+        React.createElement('div', { className: "p-3 bg-green-50 border border-green-200 rounded-lg" },
+            React.createElement('div', { className: "text-sm font-medium text-green-800 mb-1" },
+                "Substitutional Play Mode"
+            ),
+            React.createElement('div', { className: "text-xs text-green-700 mb-2" },
+                "⭐ Gold tiles = no substitution partner. Matching colors = paired for substitutions."
+            ),
+            React.createElement('div', { className: "text-xs text-green-600" },
+                `No-Sub Players: ${players.filter(p => p.star || p.isFullTime).length} | Sub Pairs: ${Math.floor(players.filter(p => p.subPair).length / 2)}`
+            )
+        ),
+        React.createElement('div', { className: "p-2 bg-blue-50 border border-blue-200 rounded-lg" },
+            React.createElement('div', { className: "text-sm font-medium text-blue-800 text-center" },
+                `Strategy ${optimizationStrategy + 1}: ${SUBSTITUTIONAL_STRATEGIES[optimizationStrategy].name}`
+            ),
+            React.createElement('div', { className: "text-xs text-blue-600 text-center mt-1" },
+                SUBSTITUTIONAL_STRATEGIES[optimizationStrategy].description
+            )
+        )
+    )
+),
 
                 // Court Display
                 React.createElement(CourtDisplay),
@@ -1968,14 +1978,14 @@ const calculateCurrentStrengths = () => {
                                 isOptimizing ? "Optimizing..." : "⚡ Serving Priority"
                             )
                         ),
-                        React.createElement('button', {
-                            onClick: shuffleStandardPlay,
-                            className: "px-3 py-3 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors disabled:bg-gray-400",
-                            disabled: bestLineups.length === 0,
-                            title: "Shuffle through best lineups"
-                        },
-                            "🔀"
-                        )
+                       React.createElement('button', {
+    onClick: playMode === 'substitutional' ? shuffleSubstitutionalStrategy : shuffleStandardPlay,
+    className: "px-3 py-3 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors disabled:bg-gray-400",
+    disabled: playMode === 'substitutional' ? players.filter(p => p.active).length < 6 : bestLineups.length === 0,
+    title: playMode === 'substitutional' ? "Switch optimization strategy" : "Shuffle through best lineups"
+},
+    "🔀"
+)
                     ),
                     React.createElement('div', { className: "flex gap-2 mt-2" },
     React.createElement('button', {
