--- a/index.html
+++ b/index.html
@@ -2031,7 +2031,7 @@
         React.createElement('div', { className: "text-xs text-center text-gray-600" },
             `D: ${defenseSuccess}/${defenseMiss} | S: ${servingSuccess}/${servingMiss}`
         ),
-        position && React.createElement('div', { className: "text-xs text-gray-600 mt-1 text-center" }, position)
+    
     );
 };
 
@@ -2077,7 +2077,7 @@
 
     return React.createElement('div', { className: "relative" },
         // Top buttons (Defense +/- for all positions, Serving +/- for server position)
-        React.createElement('div', { className: "flex justify-center gap-1 mb-1" },
+        gameMode && React.createElement('div', { className: "flex justify-center gap-1 mb-1" },
             React.createElement('button', {
                 className: "w-6 h-6 bg-red-500 text-white rounded-full text-xs flex items-center justify-center",
                 onClick: () => handleStatClick('defense', 'miss'),
