--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
             animation: floatDown 0.8s ease-out forwards;
         }
 
+        .tile-flash-green {
+            animation: flashGreen 0.6s ease-out;
+        }
+
+        .tile-flash-red {
+            animation: flashRed 0.6s ease-out;
+        }
+
         @keyframes pulse {
             0%, 100% { transform: scale(1); }
             50% { transform: scale(1.05); }
@@ -180,6 +188,20 @@
         @keyframes floatDown {
             0% { transform: translateY(0); opacity: 1; }
             100% { transform: translateY(30px); opacity: 0; }
+        }
+
+        @keyframes flashGreen {
+            0% { background-color: inherit; }
+            25% { background-color: #10b981; }
+            50% { background-color: #10b981; }
+            100% { background-color: inherit; }
+        }
+
+        @keyframes flashRed {
+            0% { background-color: inherit; }
+            25% { background-color: #ef4444; }
+            50% { background-color: #ef4444; }
+            100% { background-color: inherit; }
         }
 
         .cursor-move {
