--- a/index.html
+++ b/index.html
@@ -191,17 +191,17 @@
         }
 
         @keyframes flashGreen {
-            0% { border-color: inherit; box-shadow: inherit; }
-            25% { border-color: #10b981; box-shadow: 0 0 15px #10b981; }
-            50% { border-color: #10b981; box-shadow: 0 0 15px #10b981; }
-            100% { border-color: inherit; box-shadow: inherit; }
+            0% { background-color: inherit; }
+            25% { background-color: #10b981; }
+            50% { background-color: #10b981; }
+            100% { background-color: inherit; }
         }
 
         @keyframes flashRed {
-            0% { border-color: inherit; box-shadow: inherit; }
-            25% { border-color: #ef4444; box-shadow: 0 0 15px #ef4444; }
-            50% { border-color: #ef4444; box-shadow: 0 0 15px #ef4444; }
-            100% { border-color: inherit; box-shadow: inherit; }
+            0% { background-color: inherit; }
+            25% { background-color: #ef4444; }
+            50% { background-color: #ef4444; }
+            100% { background-color: inherit; }
         }
 
         .cursor-move {
